# solid_dd4hep

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  solid.xml  solid_beamtest.xml  solid_ecal.xml  solid_faec.xml  solid_pvdis.xml  solid_sidis.xml
benchmarks/ECal/: config.yml  run_benchmark.py  steering.py
benchmarks/ECal/options/: faec.py
benchmarks/ECal/scripts/: draw_event.py  draw_raw_edep.py  gen_particles.py
benchmarks/LGC/: optical_photon_count.py  sim.py  sim_optics.py  steering.py
benchmarks/gen_data/: imcal_epi_4_10.hepmc  imcal_epi_5.0_5.0.hepmc
compact/: FAEC.xml  FAEC_shower.xml  GEM_sidis.xml  HGC.xml  LAEC.xml  LGC.xml  colors.xml  display.xml  fields.xml  materials.xml  optical_materials.xml  optics.xml
compact/beamtest/: TCD.xml
compact/sim/: physics.xml
macro/: gps.mac  gun.mac  vis.mac
scripts/: optics_lgc.py  run_solid_lgc.py  run_solid_sidis.py  run_solid_sidis_xml.py
scripts/material_map/: material-map.cbor  material_recording_epic.py  materialmap_config.py  run_material_map_validation.sh
scripts/py_notebooks/: signal_subtraction_sim.ipynb
scripts/subsystems/: lgc_sim.py  lgc_vis.py
solid/: HGC.xml  LGC.xml
solid/sim/: sequences.xml
src/: CompositeTracker_geo.cpp  EMCalorimeterSOLID_geo.cpp  FieldMapB.cpp  FieldMapBrBz.cpp  GEMTrackerDiscSOLID_geo.cpp  GEMTrackerDisc_geo.cpp  GasCherenkov_geo.cpp  HeavyGasCherenkov_geo.cpp  HexShashlykEMCal_geo.cpp  NH3Target_geo.cpp  StandInGeometrySOLID_geo.cpp  TelescopeCherenkov_geo.cpp  ThresholdGasCherenkov_geo.cpp  TrapEndcapTracker_geo.cpp
views/: .gitignore
views/top_view/: .DAWN_1.history
